removeCompletedAndDeletedAction.Action.smallIcon=${iconsPath}clean.png

speedLimitIsEnabled=Speed limit is enabled and set to value %s/s

SKIPPED=SKIPPED
HOLD_ON=HOLD ON

refreshProxyList.Action.text=&Refresh proxy list
refreshProxyList.Action.shortDescription=Refresh the list of proxies
refreshProxyList.Action.smallIcon=${iconsPath}refresh_proxy_list.png
refreshProxyList.Action.accelerator=

UserPreferencesDialog.properties
====================================
New:
panelSpeedLimiter.border=Speed limiter
labelSpeedSliderMinValue.text=Global speed limiter minimum value
labelSpeedSliderMaxValue.text=maximum value
labelSpeedSliderStep.text=step
labelSpeedSliderKbps.text=kB/s
labelFileSpeedLimiterValues.text=Values for file speed limiter (kB/s)
fieldFileSpeedLimiterValues.toolTipText=Separate values with commas. Two commas indicate a menu separator. 0 means unlimited.
labelFileSpeedLimiterValuesDesc.text=<html><small>Separate values with commas.<br/>Two commas indicate a menu separator. 0 means unlimited.</small></html>

checkSlimLinesInHistory.text=Slim lines in History dialog

priorityUpAction.Action.text=
priorityUpAction.Action.shortDescription=Set higher plugin priority
priorityUpAction.Action.smallIcon=${iconsPath}priority_up.gif
priorityDownAction.Action.text=
priorityDownAction.Action.shortDescription=Set lower plugin priority
priorityDownAction.Action.smallIcon=${iconsPath}priority_down.gif

checkboxPluginIsActive.text=Plugin is active
checkboxUpdatePlugins.text=Make updates of this plugin
checkboxClipboardMonitoring.text=Enable plugin for Clipboard monitoring
labelAuthor.text=Author:
labelVersion.text=Version:
labelServices.text=Services:
labelPriority.text=Priority:
labelMaxConnections.text=Max downloads:


clipboardMonitoringMenu.text=&Clipboard monitoring
selectAllCMAction.Action.text=&Enable All
selectAllCMAction.Action.smallIcon=${iconsPath}checks.png
deSelectAllCMAction.Action.text=&Disable All